# pyFFTW

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  ComplexFFTW.html  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  appveyor.yml  conf.py  cython_setup.py  environment_doc.yml  fftw3.pxd  fftw3.pyx  genindex.html  index.html  index.rst  make.bat  noxfile.py  objects.inv  pdm.toml  py-modindex.html  pyfftw.pxd  pyfftw.pyx  pyfftw3.pxd  pyfftw3.pyx  pylock.toml  pyproject.toml  readthedocs.yml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_fftw3.py  test_pyfftw.py  test_pyfftw3.py
.github/workflows/: doc.yml  test_ubuntu.yml  wheel_tests_and_release.yml
_sources/: index.txt
_sources/pyfftw/: pyfftw.txt
_sources/pyfftw/interfaces/: interfaces.txt  numpy_fft.txt
_sources/sphinx/: tutorial.txt
_templates/: ComplexFFTW.html
appveyor/: build_numpy.ps1  build_scipy.ps1  deploy.ps1  install.ps1  install_miniconda.ps1  run_with_env.cmd  setup_fftw_dlls.cmd  setup_fftw_dlls.ps1
docs/: Makefile  conf.py  index.rst  make.bat
docs/release/: 0.11.0.rst  0.12.0.rst  0.13.0.rst  0.14.0.rst  0.15.0.rst  releases.rst
docs/source/: api.rst  license.rst  tutorial.rst
docs/source/pyfftw/: pyfftw.rst
docs/source/pyfftw/builders/: builders.rst
docs/source/pyfftw/interfaces/: dask_fft.rst  interfaces.rst  numpy_fft.rst  scipy_fft.rst  scipy_fftpack.rst
include/: cpu.h  pyfftw_complex.h
include/msvc_2010/: stdint.h
include/win/: complex.h  fftw3.h  stdint.h
pyfftw/: __init__.pxd  __init__.py  _version.py  builders.py  config.py  cpu.h  cpu.pxd  cpuid.h  cpuid.pxd  mpi.pxd  mpi.pxi  np_fft.py  pyfftw.html  pyfftw.pxd  pyfftw.pyx  pyfftw.rst  utils.pxi
pyfftw/builders/: __init__.py  _utils.html  _utils.py  builders.html  builders.py  builders.rst  utils.py  utils.rst
pyfftw/interfaces/: __init__.py  _utils.py  cache.py  dask_fft.py  dask_fft.rst  interfaces.html  interfaces.rst  numpy_fft.html  numpy_fft.py  scipy_fft.py  scipy_fftpack.html  scipy_fftpack.py
sphinx/: api.html  api.rst  index.html  index.rst  tutorial.html  tutorial.rst  tutorial_mpi.rst
test/: _cook_nd_args.py  _get_default_args.py  test_pyfftw.py  test_pyfftw_additional_attributes.py  test_pyfftw_additional_funcs.py  test_pyfftw_base.py  test_pyfftw_builders.py  test_pyfftw_cache_interface.py  test_pyfftw_call.py  test_pyfftw_class_misc.py  test_pyfftw_complex.py  test_pyfftw_config.py  test_pyfftw_dask_interface.py  test_pyfftw_interfaces_cache.py  test_pyfftw_mpi.py  test_pyfftw_multithreaded.py  test_pyfftw_nbyte_align.py  test_pyfftw_numpy_interface.py  test_pyfftw_partial.py  test_pyfftw_real_backward.py  test_pyfftw_real_forward.py  test_pyfftw_scipy_fft.py  test_pyfftw_scipy_interface.py  test_pyfftw_utils.py  test_pyfftw_wisdom.py  test_r2r.py
tests/: _cook_nd_args.py  _get_default_args.py  test_pyfftw_base.py  test_pyfftw_builders.py  test_pyfftw_call.py  test_pyfftw_class_misc.py  test_pyfftw_complex.py  test_pyfftw_config.py  test_pyfftw_dask_interface.py  test_pyfftw_interfaces_cache.py  test_pyfftw_multithreaded.py  test_pyfftw_nbyte_align.py  test_pyfftw_nogil.py  test_pyfftw_numpy_interface.py  test_pyfftw_partial.py  test_pyfftw_real_backward.py  test_pyfftw_real_forward.py  test_pyfftw_scipy_fft.py  test_pyfftw_scipy_interface.py  test_pyfftw_utils.py  test_pyfftw_version.py  test_pyfftw_wisdom.py  test_r2r.py
travis/: partial.sh
